# pawnstar-chess-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: engine.cpp  engine.hpp  main.cpp  play-self.cpp
src/engine/: engine.cpp  engine.hpp  eval.cpp  eval.hpp  piece-maps.hpp  piece_values.hpp  search.cpp  search.hpp  tts.cpp  utils.hpp
src/game-recorder/: game-metadata.hpp  pgn-recorder.hpp
src/minimaxSearch/: engine.cpp  engine.hpp  main.cpp
src/negaSearch/: engine.cpp  engine.hpp  main.cpp
src/refactor/: engine.cpp  engine.hpp  main.cpp  vsrandom_as_black.cpp  vsrandom_as_white.cpp  vsself.cpp
